fixed h3 fun facts size on mobile

--- a/themes/airspace-hugo/assets/scss/_common.scss
+++ b/themes/airspace-hugo/assets/scss/_common.scss
@@ -408,7 +408,9 @@ input[type="tel"] {
 
 
 
-
+.fun-facts-subtitles {
+  font-size: 17px;
+}
 
 
 
